--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" href="favicon.ico" />
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/black-tie/jquery-ui.css">
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/black-tie/jquery-ui.css">
         <link href="css/main.css" rel="stylesheet" type="text/css"/>
         
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>        
