--- a/help.html
+++ b/help.html
@@ -6,6 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="inner-div">
+            WebMidi-Learns-Notes<br>
+            Apprentissage de la lectures des notes sur une partition avec un clavier midi sous Chrome<br>
+
+Fonctionne avec toutes les claviers Midi de 25 à 88 Notes.<br>
+L'application ne gére que 2 octaves pour l'instant de C3 à C5<br>
+
+Tester le à l'adresse suivante : <a href="https://tondeur-h.github.io/">https://tondeur-h.github.io</a><br>
+
+Il est nécessaire d'utiliser un browser qui supporte les device Midi.<br>
+
+Vous pouvez vérifier si votre browser est compatible a l'adresse ci dessous <br>
+<a href=">https://caniuse.com/#search=midi">https://caniuse.com/#search=midi</a><br>
+
+Pour les utilisateurs de Chrome, vous pouvez activer la gestion midi via <br>
+l'éxécution de cette commande dans votre browser Chrome<br>
+
+<a href="chrome://flags/#webmidi">chrome://flags/#webmidi</a><br>
+Mettre sur enabled  l'option "Use Windows Runtime MIDI API"<br>
+</div>
     </body>
 </html>
