--- a/index.html
+++ b/index.html
@@ -459,11 +459,27 @@ function animate()
                 <button class="btnPlay" id="BtnPlay" onClick="run_game();">   --PLAY!--   </button>
         </div>
         
-        <div  class="keyBoardWrapper"><img id="keyboard" src="img/keyboard3.png" alt=""/> </div>
- </div> 
-<div>
-    
-</div>
+        <div  class="keyBoardWrapper"><img id="keyboard" width="500" src="img/keyboard3.png" alt=""/> </div>
  
+  <div  class="inner-div">
+      <h3>WebMidi-Learns-Notes</h3><br>
+Apprentissage de la lectures des notes sur une partition avec un clavier midi sous Chrome.<br>
+
+Fonctionne avec toutes les claviers Midi de 25 à 88 Notes.<br>
+L'application ne gére que 2 octaves pour l'instant de C3 à C5.<br>
+
+Tester le à l'adresse suivante : <a href="https://tondeur-h.github.io/">https://tondeur-h.github.io</a><br>
+
+Il est nécessaire d'utiliser un browser qui supporte les device Midi.<br>
+
+Vous pouvez vérifier si votre browser est compatible a l'adresse ci dessous : <br>
+<a href="https://caniuse.com/#search=midi">https://caniuse.com/#search=midi</a><br>
+
+Pour les utilisateurs de Chrome, vous pouvez activer la gestion midi via l'éxécution de cette commande dans votre browser Chrome.<br>
+
+<a href="chrome://flags/#webmidi">chrome://flags/#webmidi</a><br>
+Mettre sur enabled  l'option "Use Windows Runtime MIDI API".<br>
+</div>
+        </div> 
     </body>
 </html>
